# umami_mcp_server

./: LICENSE  README.md  pyproject.toml
src/analytics_service/: api.py  crawler.py  embeddings.py  server.py  utils.py
