[project]
name = "analytics-service"
version = "0.1.0"
description = "A MCP server for website tracking data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.21",
    "langchain>=0.1.9",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.4",
    "openai>=1.12.0",
    "sentence-transformers>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
analytics-service = "analytics_service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_service"]
