[project]
name = "analytics-service"
version = "0.1.0"
description = "A MCP server for website tracking data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "mcp[cli]>=1.4.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
analytics-service = "analytics_service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_service"]
